@@ -7,6 +7,8 @@ CHANGES
 	* batch "mark_read" actions through reddit api
 	* don't use send to many when "pay..."ing only 1 tip (so amount can then be edited on send tab)
 	* better tipUpdated implementation (less flickering und sort-screwing)
+	* parse claimed/returned messages
+	* new column "Acceptance Status" (can be linked, not yet linked, claimed, returned)
 
 1.0-beta5:
 
